SFS Bulk Non Availabilities/main/default/objects/Non_Availability__c/Non_Availability__c.object-meta.xml
<CustomObject>
    <label>Non Availability</label>
    <nameField>
        <label>Non Availability Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Non Availabilities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>