SFS Bulk Non Availabilities/main/default/objects/Non_Availability__c/fields/Applied_to_Resources__c.field-meta.xml
<CustomField>
    <fullName>Applied_to_Resources__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Applied to Resources</label>
    <type>Checkbox</type>
</CustomField>