SFS Bulk Non Availabilities/main/default/objects/Non_Availability__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <label>End Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>