SFS Bulk Non Availabilities/main/default/objects/Non_Availability__c/fields/Service_Territory__c.field-meta.xml
<CustomField>
    <fullName>Service_Territory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Territory</label>
    <referenceTo>ServiceTerritory</referenceTo>
    <relationshipLabel>Non Availabilities</relationshipLabel>
    <relationshipName>Non_Availabilities</relationshipName>
    <type>Lookup</type>
</CustomField>