SFS Bulk Non Availabilities/main/default/objects/Non_Availability__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <label>Start Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>