SFS Bulk Non Availabilities/main/default/objects/Non_Availability__c/validationRules/Service_Territory_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Service_Territory_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISNEW()) , ISCHANGED(Service_Territory__c ))</errorConditionFormula>
    <errorDisplayField>Service_Territory__c</errorDisplayField>
    <errorMessage>Service Territory can not be updated</errorMessage>
</ValidationRule>