SFS Bulk Non Availabilities/main/default/objects/Non_Availability__c/validationRules/Start_Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Start_Date_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>Start_Date__c &lt; NOW()</errorConditionFormula>
    <errorDisplayField>Start_Date__c</errorDisplayField>
    <errorMessage>Start Date should be in future.</errorMessage>
</ValidationRule>